add room db unit testing