@@ -49,6 +49,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '--enable-preview'
+
+            useJUnitPlatform()
+        }
+    }
+
 }
 
 dependencies {
@@ -58,9 +67,19 @@ dependencies {
     implementation "com.google.android.material:material:$materialVersion"
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.test:core-ktx:1.5.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+
+//    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0-M1'
+
+    testImplementation 'app.cash.turbine:turbine:0.12.1'
+    androidTestImplementation 'app.cash.turbine:turbine:0.9.0'
 
     // Coroutine test
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
@@ -68,11 +87,9 @@ dependencies {
 //    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
 
 
-    // Mock web server
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
-
     // Google truth for assertion
-    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "com.google.truth:truth:1.1.2"
+    androidTestImplementation "com.google.truth:truth:1.1.2"
 
     // Fragment
     implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
@@ -95,6 +112,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
+    testImplementation "androidx.room:room-testing:$roomVersion"
+
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
@@ -122,8 +141,11 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
 //    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltAndroidXVersion"
 //    kapt "androidx.hilt:hilt-compiler:$hiltAndroidXVersion"
+
+
 }
 
 kapt {
     correctErrorTypes true
 }
+
